--- a/module.frontend-service/src/main/resources/static/Plants/plants.css
+++ b/module.frontend-service/src/main/resources/static/Plants/plants.css
@@ -1,8 +1,9 @@
 
-.plantrepresentation__container{
+.plantrepresentation__container {
     padding: 20px;
 }
-.plantcards__container{
+
+.plantcards__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -10,7 +11,7 @@
     /*padding-bottom: 40px;*/
 }
 
-.plant__card{
+.plant__card {
     border-radius: 10px;
     padding: 5px;
     margin-bottom: 10px;
@@ -18,30 +19,72 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    background-color: rgba(46, 80, 70, 10%);
+    background-color: var(--main-dark-color-opacity-10);
 }
-.plant__name__header{
+
+.plant__name__header {
     width: auto;
     font-size: 18px;
     font-weight: 400;
     letter-spacing: 0.05em;
-    color: #2E5046;
+    color: var(--main-dark-color);
     text-align: center;
 }
 
-.plant__photo{
+.plant__photo {
     width: 200px;
     border-radius: 10px 10px 0 0;
     margin-bottom: 10px;
     align-self: center;
 }
 
-.relative__container{
+.relative__container {
     position: relative;
 }
 
-.admin__container{
+.admin__container {
     width: 100%;
     margin-top: 3px;
     display: grid;
+}
+
+.pagination > li > a,
+.pagination > li > span {
+    color: var(--main-dark-color-opacity-80);
+    background-color: var(--main-dark-color-opacity-40);
+}
+.pagination > li > a:hover {
+    background-color: var(--main-dark-color-opacity-80);
+    color: var(--main-light-color);
+}
+
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+    z-index: 3;
+    color: var(--main-light-color);
+    cursor: default;
+    background-color: var(--main-dark-color);
+    border-color: var(--main-dark-color);
+    outline: none;
+}
+
+.pagination > .disabled > a,
+.pagination > .disabled > a:focus,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > span,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > span:hover {
+    color: var(--main-dark-color-opacity-40);
+    cursor: not-allowed;
+    background-color: var(--main-dark-color-opacity-10);
+    border-color: var(--main-light-color);
+}
+
+.pagination__container {
+    display: flex;
+    justify-content: center;
 }
