--- a/module.frontend-service/src/main/resources/static/Plants/Plants.css
+++ b/module.frontend-service/src/main/resources/static/Plants/Plants.css
@@ -12,6 +12,7 @@
 }
 
 .plant__card {
+    /*max-width: 200px;*/
     border-radius: 10px;
     padding: 5px;
     margin-bottom: 10px;
@@ -19,7 +20,19 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: var(--main-dark-color-opacity-10);
+}
+.plant__card__body__container{
+    text-align: center;
+    max-width: 200px;
+    text-wrap: normal;
+}
+.plant__card__bottom_container{
+    align-content: center;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
 .plant__name__header {
