--- a/module.frontend-service/src/main/resources/static/BotanicaStyle.css
+++ b/module.frontend-service/src/main/resources/static/BotanicaStyle.css
@@ -154,8 +154,16 @@ a:hover{
     margin-bottom: 5px;
 }
 
+.m-0 {
+    margin: 0;
+}
+
 .button__grid{
     display: grid;
     grid-gap: 2px;
     grid-row: 25;
+}
+
+.footer__list{
+    list-style-position: inside;
 }
