--- a/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.css
+++ b/module.frontend-service/src/main/resources/static/PlantCard/PlantCard.css
@@ -186,6 +186,7 @@ input[type=checkbox]:focus{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0.5em;
+    align-items: center;
 }
 
 .selected__tab__indication{
